
option java_outer_classname="CountResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;
message CountResponse {
	optional int64 count = 1;
}